public.tf
resource "aws_subnet" "public-subnet" {
  vpc_id = "${aws_vpc.default.id}"
  cidr_block = "${var.public_subnet_cidr}"
  availability_zone = "us-east-2b"

  tags = {
  Name = "Linoxide Public Subnet"
}
}
